--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,5 +8,8 @@
   author={Rahman, Md Masudur and Xue, Yexiang},
   booktitle={European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML-PKDD 2022)},
   year={2022},
+  url={https://link.springer.com/chapter/10.1007/978-3-031-26412-2_7},
+  pdf={https://arxiv.org/pdf/2207.07749.pdf},
+  preview={thinker_overview.png},
   selected={true}
 }
