--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,3 +13,53 @@
   preview={thinker_overview.png},
   selected={true}
 }
+@inproceedings{rahman2021sequential,
+  title={Sequential prediction with logic constraints for surgical robotic activity recognition},
+  author={\textbf{Rahman}, \textbf{Md Masudur} and Voyles, Richard M and Wachs, Juan and Xue, Yexiang},
+  booktitle={30th IEEE International Conference on Robot and Human Interactive Communication (RO-MAN)},
+  year={2021}
+}
+@article{gonzalez2021dexterous,
+  title={From the dexterous surgical skill to the battlefield—a robotics exploratory study},
+  author={Gonzalez*, Glebys T and Kaur*, Upinder and \textbf{Rahman*}, \textbf{Md Masudur} and Venkatesh, Vishnunandan and Sanchez, Natalia and Hager, Gregory and Xue, Yexiang and Voyles, Richard and Wachs, Juan},
+  journal={Military Medicine},
+  volume={186},
+  number={Supplement\_1},
+  pages={288--294},
+  year={2021},
+  publisher={Oxford University Press US}
+}
+@inproceedings{rahman2019transferring,
+  title={Transferring Dexterous Surgical Skill Knowledge between Robots for Semi-autonomous Teleoperation},
+  author={\textbf{Rahman*}, \textbf{Md Masudur} and Sanchez-Tamayo*, Natalia and Gonzalez, Glebys and Agarwal, Mridul and Aggarwal, Vaneet and Voyles, Richard M and Xue, Yexiang and Wachs, Juan},
+  booktitle={28th IEEE International Conference on Robot and Human Interactive Communication (RO-MAN)},
+  year={2019}
+}
+@inproceedings{madapana2019desk,
+  title={Desk: A robotic activity dataset for dexterous surgical skills transfer to medical robots},
+  author={Madapana*, Naveen and \textbf{Rahman*}, \textbf{Md Masudur} and Sanchez-Tamayo*, Natalia and Balakuntala, Mythra V and Gonzalez, Glebys and Bindu, Jyothsna Padmakumar and Venkatesh, LN Vishnunandan and Zhang, Xingguang and Noguera, Juan Barragan and Low, Thomas and others},
+  booktitle={IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  year={2019}
+}
+@inproceedings{agarwal2021dexterous,
+  title={Dexterous skill transfer between surgical procedures for teleoperated robotic surgery},
+  author={Agarwal, Mridul and Gonzalez, Glebys and Balakuntala, Mythra V and \textbf{Rahman}, \textbf{Md Masudur} and Aggarwal, Vaneet and Voyles, Richard M and Xue, Yexiang and Wachs, Juan},
+  booktitle={30th IEEE International Conference on Robot \& Human Interactive Communication (RO-MAN)},
+  year={2021},
+}
+@inproceedings{gonzalez2021deserts,
+  title={Deserts: Delay-tolerant semi-autonomous robot teleoperation for surgery},
+  author={Gonzalez, Glebys and Agarwal, Mridul and Balakuntala, Mythra V and \textbf{Rahman}, \textbf{Md Masudur} and Kaur, Upinder and Voyles, Richard M and Aggarwal, Vaneet and Xue, Yexiang and Wachs, Juan},
+  booktitle={IEEE International Conference on Robotics and Automation (ICRA)},
+  year={2021}
+}
+@article{rahman2021sartres,
+  title={SARTRES: A semi-autonomous robot teleoperation environment for surgery},
+  author={\textbf{Rahman*}, \textbf{Md Masudur} and Balakuntala*, Mythra V and Gonzalez, Glebys and Agarwal, Mridul and Kaur, Upinder and Venkatesh, Vishnunandan LN and Sanchez-Tamayo, Natalia and Xue, Yexiang and Voyles, Richard M and Aggarwal, Vaneet and others},
+  journal={Computer Methods in Biomechanics and Biomedical Engineering: Imaging \& Visualization},
+  volume={9},
+  number={4},
+  pages={376--383},
+  year={2021},
+  publisher={Taylor \& Francis}
+}
