--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -36,14 +36,16 @@
   title={Transferring Dexterous Surgical Skill Knowledge between Robots for Semi-autonomous Teleoperation},
   author={Rahman*, Md Masudur and Sanchez-Tamayo*, Natalia and Gonzalez, Glebys and Agarwal, Mridul and Aggarwal, Vaneet and Voyles, Richard M and Xue, Yexiang and Wachs, Juan},
   booktitle={28th IEEE International Conference on Robot and Human Interactive Communication (RO-MAN)},
-  year={2019}
+  year={2019},
+  selected={true}
 }
 
 @inproceedings{madapana2019desk,
   title={Desk: A robotic activity dataset for dexterous surgical skills transfer to medical robots},
   author={Madapana*, Naveen and Rahman*, Md Masudur and Sanchez-Tamayo*, Natalia and Balakuntala, Mythra V and Gonzalez, Glebys and Bindu, Jyothsna Padmakumar and Venkatesh, LN Vishnunandan and Zhang, Xingguang and Noguera, Juan Barragan and Low, Thomas and others},
   booktitle={IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
-  year={2019}
+  year={2019},
+  selected={true}
 }
 
 @inproceedings{agarwal2021dexterous,
@@ -57,7 +59,8 @@
   title={Deserts: Delay-tolerant semi-autonomous robot teleoperation for surgery},
   author={Gonzalez, Glebys and Agarwal, Mridul and Balakuntala, Mythra V and Rahman, Md Masudur and Kaur, Upinder and Voyles, Richard M and Aggarwal, Vaneet and Xue, Yexiang and Wachs, Juan},
   booktitle={IEEE International Conference on Robotics and Automation (ICRA)},
-  year={2021}
+  year={2021},
+  selected={true}
 }
 
 @article{rahman2021sartres,
@@ -68,5 +71,6 @@
   number={4},
   pages={376--383},
   year={2021},
-  publisher={Taylor \& Francis}
+  publisher={Taylor \& Francis},
+  selected={true}
 }
