--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,9 +14,14 @@
   selected={true}
 }
 
-@inproceedings{rahman2021sequential,
-  title={Sequential prediction with logic constraints for surgical robotic activity recognition},
-  author={Rahman, Md Masudur and Voyles, Richard M and Wachs, Juan and Xue, Yexiang},
-  booktitle={30th IEEE International Conference on Robot and Human Interactive Communication (RO-MAN)},
-  year={2021}
+@inproceedings{rahman2022bootstrap2,
+  title={Bootstrap 2 State Representation using Style Transfer for Better Generalization in Deep Reinforcement Learning},
+  author={Rahman, Md Masudur and Xue, Yexiang},
+  booktitle={European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML-PKDD 2022)},
+  year={2022},
+  url={https://link.springer.com/chapter/10.1007/978-3-031-26412-2_7},
+  pdf={https://arxiv.org/pdf/2207.07749.pdf},
+  preview={thinker_overview.png},
+  selected={true}
 }
+
