--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,4 +13,58 @@
   preview={thinker_overview.png},
   selected={true}
 }
+@inproceedings{gonzalez2021deserts,
+  title={Deserts: Delay-tolerant semi-autonomous robot teleoperation for surgery},
+  author={Gonzalez, Glebys and Agarwal, Mridul and Balakuntala, Mythra V and Rahman, Md Masudur and Kaur, Upinder and Voyles, Richard M and Aggarwal, Vaneet and Xue, Yexiang and Wachs, Juan},
+  booktitle={IEEE International Conference on Robotics and Automation (ICRA)},
+  abbr={ICRA},
+  year={2021},
+  selected={true}
+}
+
+@article{rahman2021sartres,
+  title={SARTRES: A semi-autonomous robot teleoperation environment for surgery},
+  author={Rahman*, Md Masudur and Balakuntala*, Mythra V and Gonzalez, Glebys and Agarwal, Mridul and Kaur, Upinder and Venkatesh, Vishnunandan LN and Sanchez-Tamayo, Natalia and Xue, Yexiang and Voyles, Richard M and Aggarwal, Vaneet and Wachs, Juan},
+  journal={Computer Methods in Biomechanics and Biomedical Engineering: Imaging \& Visualization},
+  volume={9},
+  number={4},
+  pages={376--383},
+  year={2021},
+  publisher={Taylor \& Francis},
+  selected={true}
+}
+
+@article{gonzalez2021dexterous,
+  title={From the dexterous surgical skill to the battlefield—a robotics exploratory study},
+  author={Gonzalez*, Glebys T and Kaur*, Upinder and Rahman*, Md Masudur and Venkatesh, Vishnunandan and Sanchez, Natalia and Hager, Gregory and Xue, Yexiang and Voyles, Richard and Wachs, Juan},
+  journal={Military Medicine},
+  volume={186},
+  number={Supplement\_1},
+  pages={288--294},
+  year={2021},
+  publisher={Oxford University Press US}
+}
+
+@inproceedings{agarwal2021dexterous,
+  title={Dexterous skill transfer between surgical procedures for teleoperated robotic surgery},
+  author={Agarwal, Mridul and Gonzalez, Glebys and Balakuntala, Mythra V and Rahman, Md Masudur and Aggarwal, Vaneet and Voyles, Richard M and Xue, Yexiang and Wachs, Juan},
+  booktitle={30th IEEE International Conference on Robot \& Human Interactive Communication (RO-MAN)},
+  year={2021},
+}
+
+@inproceedings{madapana2019desk,
+  title={Desk: A robotic activity dataset for dexterous surgical skills transfer to medical robots},
+  author={Madapana*, Naveen and Rahman*, Md Masudur and Sanchez-Tamayo*, Natalia and Balakuntala, Mythra V and Gonzalez, Glebys and Bindu, Jyothsna Padmakumar and Venkatesh, LN Vishnunandan and Zhang, Xingguang and Noguera, Juan Barragan and Low, Thomas and others},
+  booktitle={IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  year={2019},
+  selected={true}
+}
+
+@inproceedings{rahman2019transferring,
+  title={Transferring Dexterous Surgical Skill Knowledge between Robots for Semi-autonomous Teleoperation},
+  author={Rahman*, Md Masudur and Sanchez-Tamayo*, Natalia and Gonzalez, Glebys and Agarwal, Mridul and Aggarwal, Vaneet and Voyles, Richard M and Xue, Yexiang and Wachs, Juan},
+  booktitle={28th IEEE International Conference on Robot and Human Interactive Communication (RO-MAN)},
+  year={2019},
+  selected={true}
+}
 
