--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,16 +3,38 @@
 
 @string{aps = {American Physical Society,}}
 
+@inproceedings{rahman2024natural,
+  title={Natural Language-based State Representation in Deep Reinforcement Learning},
+  author={Rahman, Md Masudur and Xue, Yexiang},
+  booktitle={Findings of the Association for Computational Linguistics: NAACL 2024},
+  abbr={NAACL},
+  pages={1310--1319},
+  year={2024},
+  selected={true}
+}
+
 @inproceedings{rahman2022bootstrap,
   title={Bootstrap State Representation using Style Transfer for Better Generalization in Deep Reinforcement Learning},
   author={Rahman, Md Masudur and Xue, Yexiang},
   booktitle={European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML-PKDD 2022)},
+  abbr={ECML-PKDD},
   year={2022},
   url={https://link.springer.com/chapter/10.1007/978-3-031-26412-2_7},
   pdf={https://arxiv.org/pdf/2207.07749.pdf},
   preview={thinker_overview.png},
   selected={true}
 }
+
+@inproceedings{rahman2022bootstrap_icmla,
+  title={Bootstrap Advantage Estimation for Policy Optimization in Reinforcement Learning},
+  author={Rahman, Md Masudur and Xue, Yexiang},
+  booktitle={2022 21st IEEE International Conference on Machine Learning and Applications (ICMLA)},
+  abbr={ICMLA},
+  pages={234--239},
+  year={2022},
+  organization={IEEE}
+}
+
 @inproceedings{gonzalez2021deserts,
   title={Deserts: Delay-tolerant semi-autonomous robot teleoperation for surgery},
   author={Gonzalez, Glebys and Agarwal, Mridul and Balakuntala, Mythra V and Rahman, Md Masudur and Kaur, Upinder and Voyles, Richard M and Aggarwal, Vaneet and Xue, Yexiang and Wachs, Juan},
@@ -26,6 +48,7 @@
   title={SARTRES: A semi-autonomous robot teleoperation environment for surgery},
   author={Rahman*, Md Masudur and Balakuntala*, Mythra V and Gonzalez, Glebys and Agarwal, Mridul and Kaur, Upinder and Venkatesh, Vishnunandan LN and Sanchez-Tamayo, Natalia and Xue, Yexiang and Voyles, Richard M and Aggarwal, Vaneet and Wachs, Juan},
   journal={Computer Methods in Biomechanics and Biomedical Engineering: Imaging \& Visualization},
+  abbr={Biomedical Journal},
   volume={9},
   number={4},
   pages={376--383},
@@ -38,6 +61,7 @@
   title={From the dexterous surgical skill to the battlefield—a robotics exploratory study},
   author={Gonzalez*, Glebys T and Kaur*, Upinder and Rahman*, Md Masudur and Venkatesh, Vishnunandan and Sanchez, Natalia and Hager, Gregory and Xue, Yexiang and Voyles, Richard and Wachs, Juan},
   journal={Military Medicine},
+  abbr={MilMed Journal},
   volume={186},
   number={Supplement\_1},
   pages={288--294},
@@ -48,8 +72,21 @@
 @inproceedings{agarwal2021dexterous,
   title={Dexterous skill transfer between surgical procedures for teleoperated robotic surgery},
   author={Agarwal, Mridul and Gonzalez, Glebys and Balakuntala, Mythra V and Rahman, Md Masudur and Aggarwal, Vaneet and Voyles, Richard M and Xue, Yexiang and Wachs, Juan},
-  booktitle={30th IEEE International Conference on Robot \& Human Interactive Communication (RO-MAN)},
+  booktitle={2021 30th IEEE International Conference on Robot \& Human Interactive Communication (RO-MAN)},
+  abbr={RO-MAN},
+  pages={1236--1242},
   year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{rahman2021sequential,
+  title={Sequential prediction with logic constraints for surgical robotic activity recognition},
+  author={Rahman, Md Masudur and Voyles, Richard M and Wachs, Juan and Xue, Yexiang},
+  booktitle={2021 30th IEEE International Conference on Robot \& Human Interactive Communication (RO-MAN)},
+  abbr={RO-MAN},
+  pages={468--475},
+  year={2021},
+  organization={IEEE}
 }
 
 @inproceedings{madapana2019desk,
@@ -57,6 +94,7 @@
   author={Madapana*, Naveen and Rahman*, Md Masudur and Sanchez-Tamayo*, Natalia and Balakuntala, Mythra V and Gonzalez, Glebys and Bindu, Jyothsna Padmakumar and Venkatesh, LN Vishnunandan and Zhang, Xingguang and Noguera, Juan Barragan and Low, Thomas and others},
   booktitle={IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
   year={2019},
+  abbr={IROS},
   selected={true}
 }
 
@@ -64,7 +102,9 @@
   title={Transferring Dexterous Surgical Skill Knowledge between Robots for Semi-autonomous Teleoperation},
   author={Rahman*, Md Masudur and Sanchez-Tamayo*, Natalia and Gonzalez, Glebys and Agarwal, Mridul and Aggarwal, Vaneet and Voyles, Richard M and Xue, Yexiang and Wachs, Juan},
   booktitle={28th IEEE International Conference on Robot and Human Interactive Communication (RO-MAN)},
+  abbr={RO-MAN},
   year={2019},
   selected={true}
 }
+
 
