--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,16 @@
   abbr={NAACL},
   pages={1310--1319},
   year={2024},
+  additional_info={Appears in NeurIPS 2023 Foundation Models for Decision Making Workshop (FMDM) Workshop},
   selected={true}
+}
+
+@inproceedings{rahman2024advancing,
+  title={Advancing Burn Depth Assessment through Ultrasound Imaging with Vision Transformers},
+  author={Rahman, Md Masudur and Masry, Mohamed El and Gnyawali, Surya and Gordillo, Gayle and Xue, Yexiang and Wachs,  Juan P.},
+  booktitle={In Military Health System Research Symposium 2024},
+  abbr={MHSRS-Abstract},
+  year={2024},
 }
 
 @inproceedings{rahman2022bootstrap,
@@ -23,6 +32,14 @@
   pdf={https://arxiv.org/pdf/2207.07749.pdf},
   preview={thinker_overview.png},
   selected={true}
+}
+
+@inproceedings{gonzalez2022asap,
+  title={ASAP: A Semi-Autonomous Precise robotic framework for remote surgery under delays},
+  author={Gonzalez, Glebys  and Balakuntala and Agarwal, Mridul and Rahman, Md Masudur and Low, Thomas and Aggarwal, Vaneet and Xue, Yexiang and Voyles, Richard M and Wachs, Juan P.},
+  booktitle={In Military Health System Research Symposium 2022},
+  abbr={MHSRS-Abstract},
+  year={2022},
 }
 
 @inproceedings{rahman2022bootstrap_icmla,
