--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,7 @@
   author={Rahman, Md Masudur and Xue, Yexiang},
   booktitle={Findings of the Association for Computational Linguistics: NAACL 2024},
   abbr={NAACL},
+  preview={language_state.png},
   pages={1310--1319},
   year={2024},
   additional_info={Appears in NeurIPS 2023 Foundation Models for Decision Making Workshop (FMDM) Workshop},
@@ -101,6 +102,8 @@
   author={Rahman, Md Masudur and Voyles, Richard M and Wachs, Juan and Xue, Yexiang},
   booktitle={2021 30th IEEE International Conference on Robot \& Human Interactive Communication (RO-MAN)},
   abbr={RO-MAN},
+  pdf={Roman2021-Sequential-Prediction-with-Logic-Constraints.pdf},
+  preview={logic_constraint_framework.png},
   pages={468--475},
   year={2021},
   organization={IEEE}
