--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -115,6 +115,8 @@
   booktitle={IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
   year={2019},
   abbr={IROS},
+  preview={desk_dataset.png},
+  pdf={DESK-IROS-2019.pdf},
   selected={true}
 }
 
