--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,7 @@
 @string{aps = {American Physical Society,}}
 
 @inproceedings{rahman2024natural,
+  bibtex_show={true},
   title={Natural Language-based State Representation in Deep Reinforcement Learning},
   author={Rahman, Md Masudur and Xue, Yexiang},
   booktitle={Findings of the Association for Computational Linguistics: NAACL 2024},
@@ -16,6 +17,7 @@
 }
 
 @inproceedings{rahman2024advancing,
+  bibtex_show={true},
   title={Advancing Burn Depth Assessment through Ultrasound Imaging with Vision Transformers},
   author={Rahman, Md Masudur and Masry, Mohamed El and Gnyawali, Surya and Gordillo, Gayle and Xue, Yexiang and Wachs,  Juan P.},
   booktitle={In Military Health System Research Symposium 2024},
@@ -24,6 +26,7 @@
 }
 
 @inproceedings{rahman2022bootstrap,
+  bibtex_show={true},
   title={Bootstrap State Representation using Style Transfer for Better Generalization in Deep Reinforcement Learning},
   author={Rahman, Md Masudur and Xue, Yexiang},
   booktitle={European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML-PKDD 2022)},
@@ -36,6 +39,7 @@
 }
 
 @inproceedings{gonzalez2022asap,
+  bibtex_show={true},
   title={ASAP: A Semi-Autonomous Precise robotic framework for remote surgery under delays},
   author={Gonzalez, Glebys  and Balakuntala and Agarwal, Mridul and Rahman, Md Masudur and Low, Thomas and Aggarwal, Vaneet and Xue, Yexiang and Voyles, Richard M and Wachs, Juan P.},
   booktitle={In Military Health System Research Symposium 2022},
@@ -44,6 +48,7 @@
 }
 
 @inproceedings{rahman2022bootstrap_icmla,
+  bibtex_show={true},
   title={Bootstrap Advantage Estimation for Policy Optimization in Reinforcement Learning},
   author={Rahman, Md Masudur and Xue, Yexiang},
   booktitle={2022 21st IEEE International Conference on Machine Learning and Applications (ICMLA)},
@@ -54,6 +59,7 @@
 }
 
 @inproceedings{gonzalez2021deserts,
+  bibtex_show={true},
   title={Deserts: Delay-tolerant semi-autonomous robot teleoperation for surgery},
   author={Gonzalez, Glebys and Agarwal, Mridul and Balakuntala, Mythra V and Rahman, Md Masudur and Kaur, Upinder and Voyles, Richard M and Aggarwal, Vaneet and Xue, Yexiang and Wachs, Juan},
   booktitle={IEEE International Conference on Robotics and Automation (ICRA)},
@@ -63,6 +69,7 @@
 }
 
 @article{rahman2021sartres,
+  bibtex_show={true},
   title={SARTRES: A semi-autonomous robot teleoperation environment for surgery},
   author={Rahman*, Md Masudur and Balakuntala*, Mythra V and Gonzalez, Glebys and Agarwal, Mridul and Kaur, Upinder and Venkatesh, Vishnunandan LN and Sanchez-Tamayo, Natalia and Xue, Yexiang and Voyles, Richard M and Aggarwal, Vaneet and Wachs, Juan},
   journal={Computer Methods in Biomechanics and Biomedical Engineering: Imaging \& Visualization},
@@ -76,6 +83,7 @@
 }
 
 @article{gonzalez2021dexterous,
+  bibtex_show={true},
   title={From the dexterous surgical skill to the battlefield—a robotics exploratory study},
   author={Gonzalez*, Glebys T and Kaur*, Upinder and Rahman*, Md Masudur and Venkatesh, Vishnunandan and Sanchez, Natalia and Hager, Gregory and Xue, Yexiang and Voyles, Richard and Wachs, Juan},
   journal={Military Medicine},
@@ -88,6 +96,7 @@
 }
 
 @inproceedings{agarwal2021dexterous,
+  bibtex_show={true},
   title={Dexterous skill transfer between surgical procedures for teleoperated robotic surgery},
   author={Agarwal, Mridul and Gonzalez, Glebys and Balakuntala, Mythra V and Rahman, Md Masudur and Aggarwal, Vaneet and Voyles, Richard M and Xue, Yexiang and Wachs, Juan},
   booktitle={2021 30th IEEE International Conference on Robot \& Human Interactive Communication (RO-MAN)},
@@ -98,6 +107,7 @@
 }
 
 @inproceedings{rahman2021sequential,
+  bibtex_show={true},
   title={Sequential prediction with logic constraints for surgical robotic activity recognition},
   author={Rahman, Md Masudur and Voyles, Richard M and Wachs, Juan and Xue, Yexiang},
   booktitle={2021 30th IEEE International Conference on Robot \& Human Interactive Communication (RO-MAN)},
@@ -110,6 +120,7 @@
 }
 
 @inproceedings{madapana2019desk,
+  bibtex_show={true},
   title={Desk: A robotic activity dataset for dexterous surgical skills transfer to medical robots},
   author={Madapana*, Naveen and Rahman*, Md Masudur and Sanchez-Tamayo*, Natalia and Balakuntala, Mythra V and Gonzalez, Glebys and Bindu, Jyothsna Padmakumar and Venkatesh, LN Vishnunandan and Zhang, Xingguang and Noguera, Juan Barragan and Low, Thomas and others},
   booktitle={IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
@@ -121,6 +132,7 @@
 }
 
 @inproceedings{rahman2019transferring,
+  bibtex_show={true},
   title={Transferring Dexterous Surgical Skill Knowledge between Robots for Semi-autonomous Teleoperation},
   author={Rahman*, Md Masudur and Sanchez-Tamayo*, Natalia and Gonzalez, Glebys and Agarwal, Mridul and Aggarwal, Vaneet and Voyles, Richard M and Xue, Yexiang and Wachs, Juan},
   booktitle={28th IEEE International Conference on Robot and Human Interactive Communication (RO-MAN)},
