--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,6 +22,7 @@
   author={Rahman, Md Masudur and Masry, Mohamed El and Gnyawali, Surya and Gordillo, Gayle and Xue, Yexiang and Wachs,  Juan P.},
   booktitle={In Military Health System Research Symposium 2024},
   abbr={MHSRS-Abstract},
+  preview={ambush_vit_overview.png},
   year={2024},
 }
 
@@ -44,6 +45,7 @@
   author={Gonzalez, Glebys  and Balakuntala and Agarwal, Mridul and Rahman, Md Masudur and Low, Thomas and Aggarwal, Vaneet and Xue, Yexiang and Voyles, Richard M and Wachs, Juan P.},
   booktitle={In Military Health System Research Symposium 2022},
   abbr={MHSRS-Abstract},
+  preview={forward_delay_asap.png},
   year={2022},
 }
 
