--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,17 +20,28 @@
   bibtex_show={true},
   title={Advancing Burn Depth Assessment through Ultrasound Imaging with Vision Transformers},
   author={Rahman, Md Masudur and Masry, Mohamed El and Gnyawali, Surya and Gordillo, Gayle and Xue, Yexiang and Wachs,  Juan P.},
-  booktitle={In Military Health System Research Symposium 2024},
+  booktitle={In Military Health System Research Symposium},
   abbr={MHSRS-Abstract},
   preview={ambush_vit_overview.png},
   year={2024},
+}
+
+@inproceedings{rahman2023accelerating,
+bibtex_show={true},
+title={Accelerating Policy Gradient by Estimating Value Function from Prior Computation in Deep Reinforcement Learning},
+author={Md Masudur Rahman and Yexiang Xue},
+booktitle={Workshop on Reincarnating Reinforcement Learning at ICLR 2023},
+year={2023},
+abbr={ICLR-Workshop(RRL)},
+url={https://openreview.net/forum?id=sOgyNWyN6Gu},
+pdf={https://arxiv.org/pdf/2302.01399},
 }
 
 @inproceedings{rahman2022bootstrap,
   bibtex_show={true},
   title={Bootstrap State Representation using Style Transfer for Better Generalization in Deep Reinforcement Learning},
   author={Rahman, Md Masudur and Xue, Yexiang},
-  booktitle={European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML-PKDD 2022)},
+  booktitle={European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML-PKDD)},
   abbr={ECML-PKDD},
   year={2022},
   url={https://link.springer.com/chapter/10.1007/978-3-031-26412-2_7},
@@ -43,20 +54,31 @@
   bibtex_show={true},
   title={ASAP: A Semi-Autonomous Precise robotic framework for remote surgery under delays},
   author={Gonzalez, Glebys  and Balakuntala and Agarwal, Mridul and Rahman, Md Masudur and Low, Thomas and Aggarwal, Vaneet and Xue, Yexiang and Voyles, Richard M and Wachs, Juan P.},
-  booktitle={In Military Health System Research Symposium 2022},
+  booktitle={In Military Health System Research Symposium},
   abbr={MHSRS-Abstract},
   preview={forward_delay_asap.png},
   year={2022},
 }
 
+@inproceedings{gonzalez2021a,
+  bibtex_show={true},
+  title={A Semi-autonomous Robotic Framework for Remote Surgery under Delays.},
+  author={Gonzalez, Glebys  and Balakuntala and Agarwal, Mridul and Rahman, Md Masudur  and Voyles, Richard M and Aggarwal, Vaneet and Xue, Yexiang and Wachs, Juan},
+  booktitle={In Military Health System Research Symposium},
+  abbr={MHSRS-Abstract},
+  preview={forward_delay_asap.png},
+  year={2021},
+}
 @inproceedings{rahman2022bootstrap_icmla,
   bibtex_show={true},
   title={Bootstrap Advantage Estimation for Policy Optimization in Reinforcement Learning},
   author={Rahman, Md Masudur and Xue, Yexiang},
-  booktitle={2022 21st IEEE International Conference on Machine Learning and Applications (ICMLA)},
+  booktitle={21st IEEE International Conference on Machine Learning and Applications (ICMLA)},
   abbr={ICMLA},
   pages={234--239},
   year={2022},
+  preview={bae_icmla.png},
+  pdf={https://arxiv.org/pdf/2207.07749.pdf},
   organization={IEEE}
 }
 
