--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,7 @@
 @string{aps = {American Physical Society,}}
 
 @inproceedings{rahman2024natural,
+  pdf={https://aclanthology.org/2024.findings-naacl.83.pdf},
   bibtex_show={true},
   title={Natural Language-based State Representation in Deep Reinforcement Learning},
   author={Rahman, Md Masudur and Xue, Yexiang},
@@ -27,10 +28,11 @@
 }
 
 @inproceedings{rahman2023accelerating,
+pdf={https://arxiv.org/pdf/2302.01399},
 bibtex_show={true},
 title={Accelerating Policy Gradient by Estimating Value Function from Prior Computation in Deep Reinforcement Learning},
 author={Md Masudur Rahman and Yexiang Xue},
-booktitle={Workshop on Reincarnating Reinforcement Learning at ICLR 2023},
+booktitle={Workshop on Reincarnating Reinforcement Learning at ICLR},
 year={2023},
 abbr={ICLR-Workshop(RRL)},
 url={https://openreview.net/forum?id=sOgyNWyN6Gu},
@@ -134,7 +136,7 @@ pdf={https://arxiv.org/pdf/2302.01399},
   bibtex_show={true},
   title={Sequential prediction with logic constraints for surgical robotic activity recognition},
   author={Rahman, Md Masudur and Voyles, Richard M and Wachs, Juan and Xue, Yexiang},
-  booktitle={2021 30th IEEE International Conference on Robot \& Human Interactive Communication (RO-MAN)},
+  booktitle={30th IEEE International Conference on Robot \& Human Interactive Communication (RO-MAN)},
   abbr={RO-MAN},
   pdf={Roman2021-Sequential-Prediction-with-Logic-Constraints.pdf},
   preview={logic_constraint_framework.png},
