--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,6 +33,7 @@ bibtex_show={true},
 title={Accelerating Policy Gradient by Estimating Value Function from Prior Computation in Deep Reinforcement Learning},
 author={Md Masudur Rahman and Yexiang Xue},
 booktitle={Workshop on Reincarnating Reinforcement Learning at ICLR},
+preview={rrl_env.png},
 year={2023},
 abbr={ICLR-Workshop(RRL)},
 url={https://openreview.net/forum?id=sOgyNWyN6Gu},
@@ -90,6 +91,7 @@ pdf={https://arxiv.org/pdf/2302.01399},
   author={Gonzalez, Glebys and Agarwal, Mridul and Balakuntala, Mythra V and Rahman, Md Masudur and Kaur, Upinder and Voyles, Richard M and Aggarwal, Vaneet and Xue, Yexiang and Wachs, Juan},
   booktitle={IEEE International Conference on Robotics and Automation (ICRA)},
   abbr={ICRA},
+  preview={icra2021_forward_framework.png},
   year={2021},
   selected={true}
 }
@@ -103,6 +105,7 @@ pdf={https://arxiv.org/pdf/2302.01399},
   volume={9},
   number={4},
   pages={376--383},
+  preview={sartres_framework.png},
   year={2021},
   publisher={Taylor \& Francis},
   selected={true}
