--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -93,6 +93,7 @@ pdf={https://arxiv.org/pdf/2302.01399},
   abbr={ICRA},
   preview={icra2021_forward_framework.png},
   year={2021},
+  pdf={ICRA2021-DESERTS.pdf},
   selected={true}
 }
 
@@ -106,6 +107,7 @@ pdf={https://arxiv.org/pdf/2302.01399},
   number={4},
   pages={376--383},
   preview={sartres_framework.png},
+  pdf={SARTRES-AECAI-TCIV-2020.pdf},
   year={2021},
   publisher={Taylor \& Francis},
   selected={true}
@@ -117,6 +119,7 @@ pdf={https://arxiv.org/pdf/2302.01399},
   author={Gonzalez*, Glebys T and Kaur*, Upinder and Rahman*, Md Masudur and Venkatesh, Vishnunandan and Sanchez, Natalia and Hager, Gregory and Xue, Yexiang and Voyles, Richard and Wachs, Juan},
   journal={Military Medicine},
   abbr={MilMed Journal},
+  url={https://academic.oup.com/milmed/article/186/Supplement_1/288/6119495}
   volume={186},
   number={Supplement\_1},
   pages={288--294},
