--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -123,6 +123,7 @@ pdf={https://arxiv.org/pdf/2302.01399},
   volume={186},
   number={Supplement\_1},
   pages={288--294},
+  preview={desk2battlefield.png},
   year={2021},
   publisher={Oxford University Press US}
 }
