--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,6 @@
 @string{aps = {American Physical Society,}}
 
 @inproceedings{rahman2024natural,
-  pdf={https://aclanthology.org/2024.findings-naacl.83.pdf},
   bibtex_show={true},
   title={Natural Language-based State Representation in Deep Reinforcement Learning},
   author={Rahman, Md Masudur and Xue, Yexiang},
@@ -13,6 +12,7 @@
   preview={language_state.png},
   pages={1310--1319},
   year={2024},
+  pdf={https://aclanthology.org/2024.findings-naacl.83.pdf},
   additional_info={Appears in NeurIPS 2023 Foundation Models for Decision Making Workshop (FMDM) Workshop},
   selected={true}
 }
@@ -24,7 +24,7 @@
   booktitle={In Military Health System Research Symposium},
   abbr={MHSRS-Abstract},
   preview={ambush_vit_overview.png},
-  year={2024},
+  year={2024}
 }
 
 @inproceedings{rahman2023accelerating,
@@ -37,7 +37,7 @@ preview={rrl_env.png},
 year={2023},
 abbr={ICLR-Workshop(RRL)},
 url={https://openreview.net/forum?id=sOgyNWyN6Gu},
-pdf={https://arxiv.org/pdf/2302.01399},
+pdf={https://arxiv.org/pdf/2302.01399}
 }
 
 @inproceedings{rahman2022bootstrap,
@@ -60,7 +60,7 @@ pdf={https://arxiv.org/pdf/2302.01399},
   booktitle={In Military Health System Research Symposium},
   abbr={MHSRS-Abstract},
   preview={forward_delay_asap.png},
-  year={2022},
+  year={2022}
 }
 
 @inproceedings{gonzalez2021a,
@@ -70,7 +70,7 @@ pdf={https://arxiv.org/pdf/2302.01399},
   booktitle={In Military Health System Research Symposium},
   abbr={MHSRS-Abstract},
   preview={forward_delay_asap.png},
-  year={2021},
+  year={2021}
 }
 @inproceedings{rahman2022bootstrap_icmla,
   bibtex_show={true},
