update, fix bib error

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -119,7 +119,8 @@ pdf={https://arxiv.org/pdf/2302.01399}
   author={Gonzalez*, Glebys T and Kaur*, Upinder and Rahman*, Md Masudur and Venkatesh, Vishnunandan and Sanchez, Natalia and Hager, Gregory and Xue, Yexiang and Voyles, Richard and Wachs, Juan},
   journal={Military Medicine},
   abbr={MilMed Journal},
-  url={https://academic.oup.com/milmed/article/186/Supplement_1/288/6119495}
+  url={https://academic.oup.com/milmed/article/186/Supplement_1/288/6119495},
+  html={https://academic.oup.com/milmed/article/186/Supplement_1/288/6119495},
   volume={186},
   number={Supplement\_1},
   pages={288--294},
