--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -135,6 +135,8 @@ pdf={https://arxiv.org/pdf/2302.01399}
   author={Agarwal, Mridul and Gonzalez, Glebys and Balakuntala, Mythra V and Rahman, Md Masudur and Aggarwal, Vaneet and Voyles, Richard M and Xue, Yexiang and Wachs, Juan},
   booktitle={2021 30th IEEE International Conference on Robot \& Human Interactive Communication (RO-MAN)},
   abbr={RO-MAN},
+  pdf={ROMAN2021-Dexterous-Skill-Transfer.pdf},
+  preview={roman2021_debridement.png},
   pages={1236--1242},
   year={2021},
   organization={IEEE}
