--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -155,6 +155,15 @@ pdf={https://arxiv.org/pdf/2302.01399}
   organization={IEEE}
 }
 
+@inproceedings{gonzalez2020astro,
+  bibtex_show={true},
+  title={ASTRO: A Semi-Autonomous Telemedicine Robot for Operative Surgery.},
+  author={Gonzalez, Glebys  and Rahman, Md Masudur and Agarwal, Mridul and Balakuntala, Mythra and Venkatesh, Vishnu  and Aggarwal, Vaneet and Xue, Yexiang and Voyles, Richard M and Hager, Gregory and Kirkpatrick, MAJ Andrew W and Overholser, MAJ Steve and Wachs, Juan},
+  booktitle={In Military Health System Research Symposium},
+  abbr={MHSRS-Abstract},
+  preview={forward_astro_overview.png},
+  year={2020}
+
 @inproceedings{madapana2019desk,
   bibtex_show={true},
   title={Desk: A robotic activity dataset for dexterous surgical skills transfer to medical robots},
