--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -163,7 +163,7 @@ pdf={https://arxiv.org/pdf/2302.01399}
   abbr={MHSRS-Abstract},
   preview={forward_astro_overview.png},
   year={2020}
-
+}
 @inproceedings{madapana2019desk,
   bibtex_show={true},
   title={Desk: A robotic activity dataset for dexterous surgical skills transfer to medical robots},
@@ -188,4 +188,14 @@ pdf={https://arxiv.org/pdf/2302.01399}
   selected={true}
 }
 
+@inproceedings{rahman2019morality,
+  bibtex_show={true},
+  title={Morality in Decision-Making: A Causal Approach.},
+  author={Rahman, Md Masudur},
+  booktitle={RLDM Workshop on Moral Decision Making},
+  abbr={RLDM-Workshop},
+  video={https://www.youtube.com/watch?v=2LMEV7v5JUs},
+  preview={morality_causality.png},
+  year={2019}
+}
 
