--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -199,3 +199,39 @@ pdf={https://arxiv.org/pdf/2302.01399}
   year={2019}
 }
 
+@inproceedings{rahman2019toward,
+  bibtex_show={true},
+  title={Toward optimal selection of information retrieval models for software engineering tasks},
+  author={Rahman, Md Masudur and Chakraborty, Saikat and Kaiser, Gail and Ray, Baishakhi},
+  booktitle={2019 19th International Working Conference on Source Code Analysis and Manipulation (SCAM)},
+  pages={127--138},
+  year={2019},
+  organization={IEEE},
+  abbr={SCAM},
+  pdf={SCAM-Paper-2019.pdf}
+}
+
+@inproceedings{rahman2018evaluating,
+  title={Evaluating how developers use general-purpose web-search for code retrieval},
+  author={Rahman, Md Masudur and Barson, Jed and Paul, Sydney and Kayani, Joshua and Lois, Federico Andr{\'e}s and Quezada, Sebasti{\'a}n Fernandez and Parnin, Christopher and Stolee, Kathryn T and Ray, Baishakhi},
+  booktitle={Proceedings of the 15th International Conference on Mining Software Repositories},
+  pages={465--475},
+  year={2018},
+  abbr={MSR},
+  pdf={https://arxiv.org/abs/1803.08612},
+  slide={msr2018-evaluate-code-search-slides.pdf},
+  code={https://github.com/masud99r/code-intent}
+}
+
+@article{liu2018recommending,
+  title={Recommending github projects for developer onboarding},
+  author={Liu, Chao and Yang, Dan and Zhang, Xiaohong and Ray, Baishakhi and Rahman, Md Masudur},
+  journal={IEEE Access},
+  volume={6},
+  pages={52082--52094},
+  year={2018},
+  publisher={IEEE},
+  abbr={IEEE-Access Journal},
+  pdf={IEEE-Access-2018.pdf},
+  html={https://ieeexplore.ieee.org/document/8458104}
+}
