update fig added

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -65,7 +65,7 @@ pdf={https://arxiv.org/pdf/2302.01399}
 
 @inproceedings{gonzalez2021a,
   bibtex_show={true},
-  title={A Semi-autonomous Robotic Framework for Remote Surgery under Delays.},
+  title={A Semi-autonomous Robotic Framework for Remote Surgery under Delays},
   author={Gonzalez, Glebys  and Balakuntala and Agarwal, Mridul and Rahman, Md Masudur  and Voyles, Richard M and Aggarwal, Vaneet and Xue, Yexiang and Wachs, Juan},
   booktitle={In Military Health System Research Symposium},
   abbr={MHSRS-Abstract},
@@ -157,7 +157,7 @@ pdf={https://arxiv.org/pdf/2302.01399}
 
 @inproceedings{gonzalez2020astro,
   bibtex_show={true},
-  title={ASTRO: A Semi-Autonomous Telemedicine Robot for Operative Surgery.},
+  title={ASTRO: A Semi-Autonomous Telemedicine Robot for Operative Surgery},
   author={Gonzalez, Glebys  and Rahman, Md Masudur and Agarwal, Mridul and Balakuntala, Mythra and Venkatesh, Vishnu  and Aggarwal, Vaneet and Xue, Yexiang and Voyles, Richard M and Hager, Gregory and Kirkpatrick, MAJ Andrew W and Overholser, MAJ Steve and Wachs, Juan},
   booktitle={In Military Health System Research Symposium},
   abbr={MHSRS-Abstract},
@@ -190,7 +190,7 @@ pdf={https://arxiv.org/pdf/2302.01399}
 
 @inproceedings{rahman2019morality,
   bibtex_show={true},
-  title={Morality in Decision-Making: A Causal Approach.},
+  title={Morality in Decision-Making: A Causal Approach},
   author={Rahman, Md Masudur},
   booktitle={RLDM Workshop on Moral Decision Making},
   abbr={RLDM-Workshop},
@@ -208,10 +208,12 @@ pdf={https://arxiv.org/pdf/2302.01399}
   year={2019},
   organization={IEEE},
   abbr={SCAM},
-  pdf={SCAM-Paper-2019.pdf}
+  pdf={SCAM-Paper-2019.pdf},
+  preview={scam2019_paper.png}
 }
 
 @inproceedings{rahman2018evaluating,
+  bibtex_show={true},
   title={Evaluating how developers use general-purpose web-search for code retrieval},
   author={Rahman, Md Masudur and Barson, Jed and Paul, Sydney and Kayani, Joshua and Lois, Federico Andr{\'e}s and Quezada, Sebasti{\'a}n Fernandez and Parnin, Christopher and Stolee, Kathryn T and Ray, Baishakhi},
   booktitle={Proceedings of the 15th International Conference on Mining Software Repositories},
@@ -220,10 +222,25 @@ pdf={https://arxiv.org/pdf/2302.01399}
   abbr={MSR},
   pdf={https://arxiv.org/abs/1803.08612},
   slide={msr2018-evaluate-code-search-slides.pdf},
-  code={https://github.com/masud99r/code-intent}
+  code={https://github.com/masud99r/code-intent},
+  preview={msr_code_search.png}
+}
+
+@inproceedings{rahman2018similarity,
+  bibtex_show={true},
+  title={Which similarity metric to use for software documents? A study on information retrieval based software engineering tasks},
+  author={Rahman, Md Masudur and Chakraborty, Saikat and Ray, Baishakhi},
+  booktitle={Proceedings of the 40th International Conference on Software Engineering: Companion Proceeedings},
+  pages={335--336},
+  year={2018},
+  pdf={icse2018poster-similarity-metrics.pdf},
+  poster={poster_ir_model_se_doc.pdf},
+  abbr={ICSE-Companion},
+  preview={icse_companion_metric.png}
 }
 
 @article{liu2018recommending,
+  bibtex_show={true},
   title={Recommending github projects for developer onboarding},
   author={Liu, Chao and Yang, Dan and Zhang, Xiaohong and Ray, Baishakhi and Rahman, Md Masudur},
   journal={IEEE Access},
@@ -233,5 +250,30 @@ pdf={https://arxiv.org/pdf/2302.01399}
   publisher={IEEE},
   abbr={IEEE-Access Journal},
   pdf={IEEE-Access-2018.pdf},
-  html={https://ieeexplore.ieee.org/document/8458104}
+  html={https://ieeexplore.ieee.org/document/8458104},
+  preview={ieee_access_onboarding_2018.png}
+}
+
+@inproceedings{rahman2016finding,
+  bibtex_show={true},
+  title={Finding Similar Projects in GitHub using Word2Vec and WMD},
+  author={Rahman, Md Masudur},
+  booktitle={NL+SE  at the 24nd ACM SIGSOFT International Symposium on the Foundations of Software Engineering},
+  abbr={FSE-Workshop},
+  slides={https://www.slideshare.net/slideshow/finding-similar-projects-in-github-using-word2vec-and-wmd/78182331},
+  preview={nlse_fse2016.png},
+  year={2016}
+}
+
+@inproceedings{ahmad2016topic,
+  bibtex_show={true},
+  title={Topic model based privacy protection in personalized web search},
+  author={Ahmad, Wasi Uddin and Rahman, Md Masudur and Wang, Hongning},
+  booktitle={Proceedings of the 39th International ACM SIGIR conference on Research and Development in Information Retrieval},
+  pages={1025--1028},
+  year={2016},
+  abbr={SIGIR},
+  preview={sigir2016_topic_model.png},
+  pdf={sigir2016_privacy_web_search.pdf},
+  code={https://github.com/wasiahmad/topic_based_privacy_protection_in_pws}
 }
