update scholar id

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -223,7 +223,8 @@ pdf={https://arxiv.org/pdf/2302.01399}
   pdf={https://arxiv.org/abs/1803.08612},
   slide={msr2018-evaluate-code-search-slides.pdf},
   code={https://github.com/masud99r/code-intent},
-  preview={msr_code_search.png}
+  preview={msr_code_search.png},
+  google_scholar_id={2osOgNQ5qMEC}
 }
 
 @inproceedings{rahman2018similarity,
