--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,36 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{rahman2025knowledge,
+  bibtex_show={true},
+  title={Knowledge-Driven Hypothesis Generation for Burn Diagnosis from Ultrasound with Vision-
+Language Model.},
+  author={Rahman, Md Masudur and Masry, Mohamed El and and Gordillo, Gayle and Wachs,  Juan P.},
+  booktitle={Annual Conference on Medical Image Understanding and Analysis},
+  abbr={MIUA},
+  preview={surgery_koder_crop_acc.png},
+  year={2025},
+  selected={true}
+}
+@article{rahman2025aiframework,
+  bibtex_show={true},
+  title={A Framework for Advancing Burn Assessment with Artificial Intelligence.},
+  author={Rahman, Md Masudur and Masry, Mohamed El and Gnyawali, Surya and Gordillo, Gayle and Xue, Yexiang and Wachs,  Juan P.},
+  journal={Military Medicine},
+  abbr={MilMed Journal},
+  preview={milmed_2025_fig.png},
+  year={2025},
+}
+@inproceedings{rahman2025cot,
+  bibtex_show={true},
+  title={A Chain-of-Thought AI Reasoning Framework for Burn Diagnosis},
+  author={Rahman, Md Masudur and Masry, Mohamed El and and Gordillo, Gayle and Wachs,  Juan P.},
+  booktitle={In Military Health System Research Symposium},
+  abbr={MHSRS-Abstract},
+  preview={mhsrs_2025_sample_cot.png},
+  year={2025}
+  selected={true}
+}
 @inproceedings{rahman2024natural,
   bibtex_show={true},
   title={Natural Language-based State Representation in Deep Reinforcement Learning},
