--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -30,7 +30,7 @@ Language Model.},
   booktitle={In Military Health System Research Symposium},
   abbr={MHSRS-Abstract},
   preview={mhsrs_2025_sample_cot.png},
-  year={2025}
+  year={2025},
   selected={true}
 }
 @inproceedings{rahman2024natural,
