--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,7 +17,7 @@ Language Model.},
 @article{rahman2025aiframework,
   bibtex_show={true},
   title={A Framework for Advancing Burn Assessment with Artificial Intelligence.},
-  author={Rahman, Md Masudur and Masry, Mohamed El and Gnyawali, Surya and Gordillo, Gayle and Xue, Yexiang and Wachs,  Juan P.},
+  author={Rahman, Md Masudur and Masry, Mohamed El and Gnyawali, Surya and Xue, Yexiang and Gordillo, Gayle and Wachs,  Juan P.},
   journal={Military Medicine},
   abbr={MilMed Journal},
   preview={milmed_2025_fig.png},
