--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,14 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{rahman2025burnaid,
+  author  = {Rahman, Md Masudur and Masry, Mohamed El and Gnyawali, Surya and Xue, Yexiang and Gordillo, Gayle and Wachs,  Juan P.},
+  title   = {BURN-AID: AI-Driven Integrated System for Burn Depth Prediction with Electronic Medical Records},
+  journal = {JMIR Med Inform},
+  year    = {2025},
+  doi     = {10.2196/68366},
+  selected={true}
+}
 @article{rahman2025knowledge,
   bibtex_show={true},
   title={Knowledge-Driven Hypothesis Generation for Burn Diagnosis from Ultrasound with Vision-
