--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,11 +4,13 @@
 @string{aps = {American Physical Society,}}
 
 @article{rahman2025burnaid,
+  bibtex_show={true},
   author  = {Rahman, Md Masudur and Masry, Mohamed El and Gnyawali, Surya and Xue, Yexiang and Gordillo, Gayle and Wachs,  Juan P.},
   title   = {BURN-AID: AI-Driven Integrated System for Burn Depth Prediction with Electronic Medical Records},
-  journal = {JMIR Med Inform},
+  journal = {JMIR Medical Informatics},
   year    = {2025},
   doi     = {10.2196/68366},
+  preview={burnaid_toc.png},
   selected={true}
 }
 @article{rahman2025knowledge,
