--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -121,7 +121,7 @@ pdf={https://arxiv.org/pdf/2302.01399}
   pages={234--239},
   year={2022},
   preview={bae_icmla.png},
-  pdf={https://arxiv.org/pdf/2207.07749.pdf},
+  pdf={https://arxiv.org/pdf/2210.07312},
   organization={IEEE}
 }
 
