--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,13 +16,16 @@
 @article{rahman2025knowledge,
   bibtex_show={true},
   title={Knowledge-Driven Hypothesis Generation for Burn Diagnosis from Ultrasound with Vision-
-Language Model.},
+Language Model},
   author={Rahman, Md Masudur and Masry, Mohamed El and and Gordillo, Gayle and Wachs,  Juan P.},
   booktitle={Annual Conference on Medical Image Understanding and Analysis},
   abbr={MIUA},
   preview={surgery_koder_crop_acc.png},
+  pdf={koder_ultrasound_burn_miua2025.pdf},
   year={2025},
-  selected={true}
+  selected={true},
+  award={Received the Best Paper Award in the Full Paper Poster category at the Medical Image Understanding and Analysis (MIUA) 2025, held in Leeds, UK.},
+  award_name={Best Paper}
 }
 @article{rahman2025aiframework,
   bibtex_show={true},
