--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@ Language Model},
   author={Rahman, Md Masudur and Masry, Mohamed El and and Gordillo, Gayle and Wachs,  Juan P.},
   booktitle={Annual Conference on Medical Image Understanding and Analysis},
   abbr={MIUA},
-  preview={surgery_koder_crop_acc.png},
+  preview={burn_ultrasound_ambush_miua2025.png},
   pdf={koder_ultrasound_burn_miua2025.pdf},
   year={2025},
   selected={true},
