--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
 @article{rahman2025burnaid,
   bibtex_show={true},
   author  = {Rahman, Md Masudur and Masry, Mohamed El and Gnyawali, Surya and Xue, Yexiang and Gordillo, Gayle and Wachs,  Juan P.},
-  title   = {BURN-AID: AI-Driven Integrated System for Burn Depth Prediction with Electronic Medical Records},
+  title   = {AI-Driven Integrated System for Burn Depth Prediction With Electronic Medical Records: Algorithm Development and Validation},
   journal = {JMIR Medical Informatics},
   year    = {2025},
   doi     = {10.2196/68366},
